--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
  <section>
   <img alt="Worked at home" src="icons/work-from-home.png">
-   <p><b><u>4.31% worked from home</u></b> About 170,000 New Yorkers said they didn’t commute because they worked from home. This number preceded the times of the pandemic, which made it that all workers —excluding essential ones— had to work from home.</p>
+   <p><b><u>4.31% worked from home.</u></b> About 170,000 New Yorkers said they didn’t commute because they worked from home. This number preceded the times of the pandemic, which made it that all workers —excluding essential ones— had to work from home.</p>
  </section>
 
  <section>
