--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
  <section>
   <img alt="Bicycle" src="icons/bicycle.png">
-   <p><b><u>1.26% rode a bicycle.</u></b> Over 50,000 New Yorkers said they rode a bicycle to work. This number remains small possibly due to the high rates of bicycle accidents in New York City. It is also unclear how many people of this group are delivery workers who work while riding the bicycle.</p>
+   <p><b><u>1.26% rode a bicycle.</u></b> Over 50,000 New Yorkers said they rode a bicycle to work. This number remains small possibly due to the high rates of bicycle accidents in New York City. It is also unclear how many people of this group are delivery workers, who work while riding the bicycle.</p>
  </section>
 </div>
 
@@ -78,7 +78,7 @@
  </section>
 </div>
 
-<p class="p4">The American Community Survey (2019) also reported that the average commute to work lasted for 42 minutes. However, many New Yorkers typically take over an hour to be at their jobs.</p>
+<p class="p4">The 2019 American Community Survey also reported that the average commute to work lasted for 42 minutes. However, many New Yorkers typically take over an hour to be at their jobs.</p>
 
 <p class="source">Source: U.S. Census Bureau, American Community Survey (2019)
 
