--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
  </section>
 </div>
 
-<p class="p4">The 2019 American Community Survey also reported that the average commute to work lasted for 42 minutes. However, many New Yorkers typically take over an hour to be at their jobs.</p>
+<p class="p4">The 2019 American Community Survey also reported that the average commute to work lasted for 42 minutes. However, many New Yorkers typically take more than that to be at their jobs.</p>
 
 <p class="source">Source: U.S. Census Bureau, American Community Survey (2019)
 
